--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA ist Cloud Storage mit permanenter Privatsphäre. 50GB kostenlos</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Gesamtgröße</string>
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Account erstellen</string>
     <string name="name_text" context="Name of the user">Name</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Ich stimme MEGA\\'s <a href=\"https://mega.co.nz/mobile_privacy.html\">Allgemeinen Geschäftsbedingungen</a> zu</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Ich stimme MEGA\'s &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Allgemeinen Geschäftsbedingungen&lt;/a&gt; zu</string>
     <string name="already_account" context="Does the user already have a MEGA account">Haben Sie bereits einen Account?</string>
     
     <string name="create_account_no_terms" context="warning dialog">You have to accept our Terms of Service.</string>
@@ -169,7 +169,7 @@
 	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can\'t access the folder">Kein öffentlicher Link</string>
 	<string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">Öffentlicher Link</string>
 	<string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">Unbeschränkter Zugang</string>
-	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Read & write</string>
+	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Read &amp; write</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Nur lesen</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Shared with: </string>
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Permissions:</string>
@@ -196,7 +196,7 @@
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Möchten Sie den Download abbrechen?</string>
     <string name="download_touch_to_cancel" context="Hint how to cancel the download">Downloads können durch Antippen abgebrochen werden</string>
     <string name="error_file_size_greater_than_4gb" context="Warning message">Dateien größer als 4 GB können von den meisten Geräten nicht heruntergeladen werden. Ihr Download wird möglicherweise fehlschlagen. </string>
-    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">There isn\\'t any available app to execute this file on your device</string>
+    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">There isn\'t any available app to execute this file on your device</string>
 	
     <string name="context_share_image" context="to share an image using Facebook, Whatsapp, etc">Share image using</string>
     <string name="context_get_link" context="create a link of a file and send it using an app from the device">Share link</string>
