--- a/res/values-ee/strings.xml
+++ b/res/values-ee/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA on väga privaatsusttoetav pilveteenus. 50 GB tasuta</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Maht kokku</string>
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Looge konto</string>
     <string name="name_text" context="Name of the user">nimi</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Ma nõustun MEGA  <a href=\"https://mega.co.nz/mobile_privacy.html\">teenusetingimustega</a></string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Ma nõustun MEGA  &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;teenusetingimustega&lt;/a&gt;</string>
     <string name="already_account" context="Does the user already have a MEGA account">Kasutaja on juba olemas?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Peate nõustuma meie teenusetingimustega.</string>
@@ -169,7 +169,7 @@
 	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can\'t access the folder">Avalikku linki pole</string>
 	<string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">Avalik link</string>
 	<string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">Täielik ligipääs</string>
-	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Lugemiseks & kirjutamiseks</string>
+	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Lugemiseks &amp; kirjutamiseks</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Ainult loetav</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Jagatud kasutajatega: </string>
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Load: </string>
