--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA est un Service de Cloud Avec une Confidentialité Puissante et Toujours Active. 50Go gratuit</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Taille totale</string>
@@ -34,7 +34,7 @@
     <string name="remove_key_confirmation" context="confirmation message before removing the previously downloaded MasterKey file">Vous êtes sur le point de supprimer le fichier de la clef-maître exportée.</string>  
     <string name="export_key_confirmation" context="confirmation message before downloading to the device the MasterKey file">Avertissement de sécurité: Ceci est une opération très risquée. Voulez-vous continuer ?</string> 
      
-    <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">Plus d\\'options...</string> 
+    <string name="more_options_overflow" context="title of the menu for more options for each file (rename, share, copy, move, etc)">Plus d\'options...</string> 
     <string name="confirmation_remove_contact" context="confirmation message before removing a contact. Do not write question mark">Voulez-vous supprimer le contact</string>    
     <string name="confirmation_remove_multiple_contacts" context="confirmation message before removing mutiple contacts">Do you want these contacts?</string>  
     
@@ -80,7 +80,7 @@
     
     <plurals name="general_num_downloads" context="in the notification. When downloading the notification is like 3 downloads.">
         <item quantity="one" context="Item menu option upon clicking on one or multiple files. Singular">téléchargement</item>
-        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">[$2222]</item>
+        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">téléchargements</item>
     </plurals>
     
     <plurals name="general_num_uploads">
@@ -121,10 +121,10 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Créer un compte</string>
     <string name="name_text" context="Name of the user">nom</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">J\\'accepte les <a href=\"https://mega.co.nz/mobile_privacy.html\">Conditions  d\\'Utilisation</a> de MEGA</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">J\'accepte les &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Conditions  d\'Utilisation&lt;/a&gt; de MEGA</string>
     <string name="already_account" context="Does the user already have a MEGA account">Avez-vous déjà  un compte ?</string>
     
-    <string name="create_account_no_terms" context="warning dialog">Vous devez accepter nos Conditions d\\'Utilisation.</string>
+    <string name="create_account_no_terms" context="warning dialog">Vous devez accepter nos Conditions d\'Utilisation.</string>
 	<string name="error_enter_username" context="Warning dialog">Veuillez insérer votre nom.</string>
     <string name="error_short_password" context="when creating the account">Le mot de passe est trop court</string>
     <string name="error_passwords_dont_match" context="when creating the account">Les mots de passes ne correspondent pas</string>
@@ -195,10 +195,10 @@
     <string name="download_began" context="message when the download starts">Le téléchargement a démarré</string>
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Voulez-vous annuler le téléchargement ?</string>
     <string name="download_touch_to_cancel" context="Hint how to cancel the download">Annuler le téléchargement</string>
-    <string name="error_file_size_greater_than_4gb" context="Warning message">La plupart des appareils ne peuvent pas télécharger des fichiers d\\'une taille excédant 4Go.Votre téléchargement va probablement échouer.</string>
-    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">Il n\\'y a pas d\\'application disponible pour exécuter ce fichier sur votre appareil</string>
+    <string name="error_file_size_greater_than_4gb" context="Warning message">La plupart des appareils ne peuvent pas télécharger des fichiers d\'une taille excédant 4Go.Votre téléchargement va probablement échouer.</string>
+    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">Il n\'y a pas d\'application disponible pour exécuter ce fichier sur votre appareil</string>
 	
-    <string name="context_share_image" context="to share an image using Facebook, Whatsapp, etc">Partager l\\'image avec</string>
+    <string name="context_share_image" context="to share an image using Facebook, Whatsapp, etc">Partager l\'image avec</string>
     <string name="context_get_link" context="create a link of a file and send it using an app from the device">Partager le lien</string>
     <string name="context_get_link_menu" context="Item menu option upon right click on one or multiple files.">Récupérer le lien</string>
     <string name="context_rename" context="Item menu option upon right click on one or multiple files.">Renommer</string>
@@ -249,7 +249,7 @@
     <string name="context_no_link" context="error message">Impossible de récupérer le lien</string>
     <string name="context_correctly_removed" context="success message when removing a node from MEGA">Suppression de MEGA réussi</string>
     <string name="context_no_removed" context="error message">Erreur. Suppression de MEGA annulée</string>
-    <string name="context_correctly_copied_contact" context="success message when sending a file to a contact">Succès de l\\'envoi vers :</string>
+    <string name="context_correctly_copied_contact" context="success message when sending a file to a contact">Succès de l\'envoi vers :</string>
     
     <string name="context_node_private" context="success message after removing the public link of a folder">Le dossier est maintenant privé</string>
     <string name="context_share_correctly_removed" context="success message after removing a share of a folder. a contact has no access to the folder now">Annulation du mode Partage réussi</string>
@@ -264,14 +264,14 @@
 	<string name="upload_to_filesystem" context="upload to. Then choose to browse the file system to choose a file">Prendre depuis le Système de Fichier</string>
 	<string name="upload_select_file_type" context="title of the dialog for choosing if a user wants to upload an image, an audio, a video or a file from the system">Sélectionner le type de fichier</string>
 	<string name="upload_uploading" context="status text">Envoi en cours</string>
-	<string name="upload_touch_to_cancel" context="hint to how to cancel the upload (by touching the notification)">Annuler l\\'upload</string>
-	<string name="upload_failed" context="error message">Échec de l\\'upload</string>
+	<string name="upload_touch_to_cancel" context="hint to how to cancel the upload (by touching the notification)">Annuler l\'upload</string>
+	<string name="upload_failed" context="error message">Échec de l\'upload</string>
 	<string name="upload_uploaded" context="Label for the current uploaded size of a file. For example, 3 files, 50KB uploaded">uploadé</string>
-	<string name="upload_cancel_uploading" context="Confirmation text for cancelling an upload">Voulez-vous annuler l\\'upload ?</string>
+	<string name="upload_cancel_uploading" context="Confirmation text for cancelling an upload">Voulez-vous annuler l\'upload ?</string>
 	<string name="upload_prepare" context="Status text at the beginning of an upload">Fichier en cours de traitement</string>
 	<string name="error_temporary_unavaible" context="error message when downloading a file">Ressource temporairement indisponible, veuillez réessayer plus tard.</string>
-	<string name="upload_can_not_open" context="Error message when the selected file cannot be opened">Impossible d\\'ouvrir le fichier sélectionné</string>
-	<string name="upload_began" context="when an upload starts, a message is shown to the user">L\\'upload a démarré</string>
+	<string name="upload_can_not_open" context="Error message when the selected file cannot be opened">Impossible d\'ouvrir le fichier sélectionné</string>
+	<string name="upload_began" context="when an upload starts, a message is shown to the user">L\'upload a démarré</string>
 	<string name="unzipping_process" context="when a zip file is downloaded and clicked, the app unzips the file. This is the status text while unzipping the file">Décompression du fichier en cours</string>
 		
 	<string name="error_io_problem" context="error message while browsing the local filesystem">Problème de système de fichier</string>
@@ -298,7 +298,7 @@
     <string name="my_account_change_password_OK" context="Success text">Mot de passe modifié avec succès.</string>
     
     <string name="upgrade_activity" context="title of the Upgrade screen">Adhésion Pro</string>
-    <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Sélectionner le type d\\'adhésion</string>
+    <string name="upgrade_select_pricing" context="title of the selection of the pro account wanted">Sélectionner le type d\'adhésion</string>
     <string name="select_membership_1" context="the user has to decide the way of payment">Renouvellement mensuel ou annuel</string>
     <string name="select_membership_2" context="button to go to Paypal">Abonnement via PayPal</string>
     
@@ -309,7 +309,7 @@
     
     <string name="file_properties_get_link" context="the user can get the link and it\'s copied to the clipboard">Le lien a été copié dans le presse-papier</string>
     
-    <string name="full_image_viewer_not_preview" context="before sharing an image, the preview has to be downloaded">L\\'aperçu n\\'a pas encore été téléchargé. Veuillez attendre.</string>
+    <string name="full_image_viewer_not_preview" context="before sharing an image, the preview has to be downloaded">L\'aperçu n\'a pas encore été téléchargé. Veuillez attendre.</string>
     
     <string name="import_correct" context="success message after import a file">Importation réussi</string>
     
@@ -323,11 +323,11 @@
     <string name="cam_sync_ok" context="Answer for confirmation dialog.">OK</string>
     <string name="cam_sync_skip" context="skip the step of camera upload">Passer</string>
     <string name="cam_sync_syncing" context="The upload of the user\'s photos orvideos from their specified album is in progress.">Envoi des Photos de la Caméra en cours</string>
-    <string name="cam_sync_cancel_sync" context="confirmation question for cancelling the camera uploads">Voulez-vous désactiver l\\'Envoie des Photos de la Caméra ?</string>
+    <string name="cam_sync_cancel_sync" context="confirmation question for cancelling the camera uploads">Voulez-vous désactiver l\'Envoie des Photos de la Caméra ?</string>
     <string name="settings_camera_notif_error_no_folder" context="Error message when an unavailable destination folder was selected">Dossier de destination indisponible</string>
     <string name="settings_camera_notif_title" context="title of the notification when camera upload is enabled">Envoi en cours des photos de la caméra</string>
-    <string name="settings_camera_notif_error" context="notification error">Problème lors de l\\'Envoi des Photos de la Caméra</string>
-    <string name="settings_camera_notif_complete" context="notification camera uploads complete">L\\'Envoi des Photos de la Caméra a été terminé</string>
+    <string name="settings_camera_notif_error" context="notification error">Problème lors de l\'Envoi des Photos de la Caméra</string>
+    <string name="settings_camera_notif_complete" context="notification camera uploads complete">L\'Envoi des Photos de la Caméra a été terminé</string>
     
     <string name="settings_storage" context="Text listed before the amount of storage a user gets with a certain package. For example: &quot;1TB Storage&quot;.">Stockage</string>
     <string name="settings_pin_lock" context="settings category title. Below this title, the pin lock settings start">Verrouillage par PIN</string>
@@ -335,8 +335,8 @@
     <string name="settings_storage_download_location" context="title of the setting to set the default download location">Répertoire de téléchargement par défaut</string>
     <string name="settings_storage_ask_me_always" context="Whether to always ask the user each time.">Toujours demander la destination des téléchargements</string>
     
-    <string name="settings_camera_upload_on" context="settings option">Activer l\\'Envoi des Photos de la Caméra</string>
-    <string name="settings_camera_upload_off" context="settings option">Désactiver l\\'Envoi des Photos de la Caméra</string>
+    <string name="settings_camera_upload_on" context="settings option">Activer l\'Envoi des Photos de la Caméra</string>
+    <string name="settings_camera_upload_off" context="settings option">Désactiver l\'Envoi des Photos de la Caméra</string>
     <string name="settings_camera_upload_how_to_upload" context="settings option. How to upload the camera images: via Wi-Fi only or via Wi-Fi and data plan">Comment envoyer</string>
     
     <string-array name="settings_camera_upload_how_to_entries" context="the options of how to upload, but in an array. needed for the settings">
@@ -366,7 +366,7 @@
     <string name="pin_lock_incorrect" context="error message when not typing the pin code correctly">Code incorrect</string>
     
     <string name="settings_about" context="Caption of a title, in the context of &quot;About MEGA&quot; or &quot;About us&quot;">À Propos</string>
-    <string name="settings_about_app_version" context="App means &quot;Application&quot;">Version de l\\'Application</string>
+    <string name="settings_about_app_version" context="App means &quot;Application&quot;">Version de l\'Application</string>
     
     <string name="january">Janvier</string>
     <string name="february">Février</string>
@@ -390,7 +390,7 @@
     <string name="pro2_account" context="Not translate">PRO II</string>
     <string name="pro3_account" context="Not translate">PRO III</string>
     
-    <string name="camera_uploads_created" context="info message shown to the user when the Camera Uploads folder has been created">Dossier  pour l\\'Envoir des Photos de la Caméra créé</string>
+    <string name="camera_uploads_created" context="info message shown to the user when the Camera Uploads folder has been created">Dossier  pour l\'Envoir des Photos de la Caméra créé</string>
     
     <string name="ZIP_download_permission" context="A compressed file will be downloaded and decompressed.">Le fichier ZIP sera téléchargé et décompressé.</string>
     <string name="ZIP_unzip_permission" context="A compressed file will be decompressed.">Le fichier ZIP sera décompressé</string>
