--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGAはプライバシー完璧のクラウド・ストレージ。50GB 無料!</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">合計サイズ</string>
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">アカウントを作成する</string>
     <string name="name_text" context="Name of the user">氏名</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">私は、MEGAの<a href=\"https://mega.co.nz/mobile_privacy.html\">利用規約</a>に同意します。</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">私は、MEGAの&lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;利用規約&lt;/a&gt;に同意します。</string>
     <string name="already_account" context="Does the user already have a MEGA account">もうアカウントをお持ちですか？</string>
     
     <string name="create_account_no_terms" context="warning dialog">利用規約に同意して下さい。</string>
@@ -169,7 +169,7 @@
 	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can\'t access the folder">公共リンクなし</string>
 	<string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">公共リンク</string>
 	<string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">フルアクセス</string>
-	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">読み込み&書き込み</string>
+	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">読み込み&amp;書き込み</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">読み取り専用</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">共有相手:</string>
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">許可:</string>
