--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA to dysk w chmurze z pełnym wsparciem prywatności. 50GB za darmo</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Całkowity rozmiar</string>
@@ -60,36 +60,50 @@
         
      <plurals name="general_num_files" context="this is used for example when downloading 1 file or 2 files">
         <item context="Singular of file. 1 file" quantity="one">pliki</item>
-        <item context="Plural of file. 2 files" quantity="other">pliki</item>
+        <item context="Plural of file. Few files" quantity="few">pliki</item>
+        <item context="Plural of file. Many files" quantity="many">pliki</item>
+        <item context="Plural of file. Plural files" quantity="other">pliki</item>
     </plurals>
     
      <plurals name="general_num_contacts">
         <item quantity="one" context="referring to a contact in the contact list of the user">kontakt</item>
+        <item quantity="few" context="Title of the contact list">kontakty</item>
+        <item quantity="many" context="Title of the contact list">kontakty</item>
         <item quantity="other" context="Title of the contact list">kontakty</item>
     </plurals>
     
     <plurals name="general_num_folders">
         <item quantity="one" context="Singular of folder/directory. 1 folder">katalog</item>
-        <item quantity="other" context="Plural of folder/directory. 2 folders">katalogi</item>
+        <item quantity="few" context="Plural of folder/directory. Few folders">katalogi</item>
+        <item quantity="many" context="Plural of folder/directory. Many folders">katalogi</item>
+        <item quantity="other" context="Plural of folder/directory. Plural folders">katalogi</item>
     </plurals>
     
    <plurals name="general_num_shared_folders">
         <item quantity="one" context="Title of the incoming shared folders of a user in singular">udostępniony katalog</item>
+        <item quantity="few" context="Title of the incoming shared folders of a user in plural.">udostępnione katalogu</item>
+        <item quantity="many" context="Title of the incoming shared folders of a user in plural.">udostępnione katalogu</item>
         <item quantity="other" context="Title of the incoming shared folders of a user in plural.">udostępnione katalogu</item>
     </plurals>
     
     <plurals name="general_num_downloads" context="in the notification. When downloading the notification is like 3 downloads.">
         <item quantity="one" context="Item menu option upon clicking on one or multiple files. Singular">pobranie</item>
-        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">[$2222]</item>
+        <item quantity="few" context="Item menu option upon clicking on one or multiple files. Singular">pobranie</item>
+        <item quantity="many" context="Item menu option upon clicking on one or multiple files. Singular">pobranie</item>
+        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Singular">pobranie</item>
     </plurals>
     
     <plurals name="general_num_uploads">
         <item quantity="one" context="Transfer type description in the active file transfer panel, can either be upload or download. Singular">wgraj</item>
+        <item quantity="few" context="Transfer type description in the active file transfer panel, can either be upload or download. Plural">wgrywania</item>
+        <item quantity="many" context="Transfer type description in the active file transfer panel, can either be upload or download. Plural">wgrywania</item>
         <item quantity="other" context="Transfer type description in the active file transfer panel, can either be upload or download. Plural">wgrywania</item>
     </plurals>
     
      <plurals name="general_num_users" context="used for example when a folder is shared with 1 user or 2 users">
         <item quantity="one" context="used for example when a folder is shared with 1 user">użytkownik</item>
+        <item quantity="few" context="used for example when a folder is shared with 2 or more users">użytkownicy</item>
+        <item quantity="many" context="used for example when a folder is shared with 2 or more users">użytkownicy</item>
         <item quantity="other" context="used for example when a folder is shared with 2 or more users">użytkownicy</item>
     </plurals>
     
@@ -121,7 +135,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Utwórz konto</string>
     <string name="name_text" context="Name of the user">nazwa</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Akceptuję <a href=\"https://mega.co.nz/mobile_privacy.html\">regulamin</a> MEGA</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Akceptuję &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;regulamin&lt;/a&gt; MEGA</string>
     <string name="already_account" context="Does the user already have a MEGA account">Masz już konto?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Musisz zaakceptować regulamin.</string>
@@ -169,7 +183,7 @@
 	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can\'t access the folder">Brak linku</string>
 	<string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">Link publiczny</string>
 	<string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">Pełny dostęp</string>
-	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Odczyt & Zapis</string>
+	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Odczyt &amp; Zapis</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Tylko odczyt</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Udostępnij do:</string>
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Uprawnienia:</string>
