--- a/res/values-sk/strings.xml
+++ b/res/values-sk/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA je Cloduvé úložisko s výkonným, vzdy-zapnutým súkromím. 50GB zdarma</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Ceľková veľkosť</string>
@@ -60,36 +60,43 @@
         
      <plurals name="general_num_files" context="this is used for example when downloading 1 file or 2 files">
         <item context="Singular of file. 1 file" quantity="one">súbor</item>
+        <item context="few" quantity="few">súbory</item>
         <item context="Plural of file. 2 files" quantity="other">súbory</item>
     </plurals>
     
      <plurals name="general_num_contacts">
         <item quantity="one" context="referring to a contact in the contact list of the user">kontakt</item>
+        <item quantity="few" context="Title of the contact list">kontakty</item>
         <item quantity="other" context="Title of the contact list">kontakty</item>
     </plurals>
     
     <plurals name="general_num_folders">
         <item quantity="one" context="Singular of folder/directory. 1 folder">priečinok</item>
+        <item quantity="few" context="Plural of folder/directory. 2 folders">priečinky</item>
         <item quantity="other" context="Plural of folder/directory. 2 folders">priečinky</item>
     </plurals>
     
    <plurals name="general_num_shared_folders">
         <item quantity="one" context="Title of the incoming shared folders of a user in singular">zdieľaný priečinok</item>
+        <item quantity="few" context="Title of the incoming shared folders of a user in plural.">zdieľané priečinky</item>
         <item quantity="other" context="Title of the incoming shared folders of a user in plural.">zdieľané priečinky</item>
     </plurals>
     
     <plurals name="general_num_downloads" context="in the notification. When downloading the notification is like 3 downloads.">
         <item quantity="one" context="Item menu option upon clicking on one or multiple files. Singular">stiahnuť</item>
-        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">[$2222]</item>
+        <item quantity="few" context="Item menu option upon clicking on one or multiple files. Plural">stiahnuť</item>
+        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">stiahnuť</item>
     </plurals>
     
     <plurals name="general_num_uploads">
         <item quantity="one" context="Transfer type description in the active file transfer panel, can either be upload or download. Singular">nahrávanie</item>
+        <item quantity="few" context="Transfer type description in the active file transfer panel, can either be upload or download. Plural">nahrávania</item>
         <item quantity="other" context="Transfer type description in the active file transfer panel, can either be upload or download. Plural">nahrávania</item>
     </plurals>
     
      <plurals name="general_num_users" context="used for example when a folder is shared with 1 user or 2 users">
         <item quantity="one" context="used for example when a folder is shared with 1 user">užívateľ</item>
+        <item quantity="few" context="used for example when a folder is shared with 2 or more users">užívateľmi</item>
         <item quantity="other" context="used for example when a folder is shared with 2 or more users">užívateľmi</item>
     </plurals>
     
@@ -121,7 +128,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Vytvoriť účet</string>
     <string name="name_text" context="Name of the user">názov</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Súhasím so  <a href=\"https://mega.co.nz/mobile_privacy.html\">Zmluvnými podmiekami</a> služby MEGA</string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Súhasím so  &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Zmluvnými podmiekami&lt;/a&gt; služby MEGA</string>
     <string name="already_account" context="Does the user already have a MEGA account">Máte už účet?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Musíte súhlasiť s našimi Zmluvnými podmiekami.</string>
@@ -148,7 +155,7 @@
 
 	<string name="section_account" context="button to the settings of the user\'s account">Môj účet</string>
 	<string name="section_photo_sync" context="title of the screen where the camera images are uploaded">Súbory z fotoaparátu</string>
-	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$ z %2%</string>
+	<string name="used_space" context="Used space &quot;5MB of 100MB&quot;.">%1$s z %2$s</string>
 	<string name="tab_incoming_shares" context="Capital letters. Incoming shared folders. The title of a tab">PRÍCHODZIE</string>
 	<string name="tab_outgoing_shares" context="Capital letters. Outgoing shared folders. The title of a tab">ODCHÁDZAJÚCE</string>
 	
