--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA är en molnlagringstjänst med kraftfull kryptering. 50GB gratis</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Total storlek</string>
@@ -121,7 +121,7 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Skapa konto</string>
     <string name="name_text" context="Name of the user">namn</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Jag håller med MEGA\\'s <a href=\"https://mega.co.nz/mobile_privacy.html\">Terms of Service</a></string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">Jag håller med MEGA\'s &lt;a href=\"https://mega.co.nz/mobile_privacy.html\"&gt;Terms of Service&lt;/a&gt;</string>
     <string name="already_account" context="Does the user already have a MEGA account">Har du redan ett konto?</string>
     
     <string name="create_account_no_terms" context="warning dialog">Du måste acceptera våra användarvillkor</string>
@@ -169,7 +169,7 @@
 	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can\'t access the folder">Ingen publik länk</string>
 	<string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">Publik länk</string>
 	<string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">Full tillgång</string>
-	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Läs & skriv</string>
+	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Läs &amp; skriv</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Skrivskyddad</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Delad med:</string>
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Rättigheter: </string>
