--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -4,7 +4,7 @@
     <string name="app_name" context="Not translate">MEGA_COM</string>
     <string name="app_version" context="Not translate">0.43</string>
     
-    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
+    <string name="full_description_text" context="Full description text of the app in the Google Play page of the app">MEGA is a secure cloud storage service that gives you 50GB for free.Unlike other cloud storage providers, your data is encrypted and decrypted by the client devices only and never by us.Your data is accessible any time, from any device, anywhere. Share folders with your contacts and see their updates in real time.The cloud in your pocket. Access and stream your files from your smartphone or tablet. Upload and sync your media to the cloud.Search, store, download, stream, view, share, rename or delete your files. It\'s all there - in the palm of your hands.For more info, please check our website: https://mega.co.nz/</string>
     <string name="short_description_text" context="Short description text of the app in the Google Play page of the app">MEGA is Cloud Storage with Powerful Always-On Privacy. 50GB for free</string>
     
     <string name="general_total_size" context="label for the total file size of multiple files and/or folders (no need to put the colon punctuation in the translation)">Загальний розмір</string>
@@ -60,36 +60,50 @@
         
      <plurals name="general_num_files" context="this is used for example when downloading 1 file or 2 files">
         <item context="Singular of file. 1 file" quantity="one">file</item>
-        <item context="Plural of file. 2 files" quantity="other">files</item>
+        <item context="few" quantity="few">files</item>
+        <item context="many" quantity="many">files</item>
+        <item context="Plural of file." quantity="other">files</item>
     </plurals>
     
      <plurals name="general_num_contacts">
         <item quantity="one" context="referring to a contact in the contact list of the user">contact</item>
+        <item quantity="few" context="few">contacts</item>
+        <item quantity="many" context="many">contacts</item>
         <item quantity="other" context="Title of the contact list">contacts</item>
     </plurals>
     
     <plurals name="general_num_folders">
         <item quantity="one" context="Singular of folder/directory. 1 folder">folder</item>
-        <item quantity="other" context="Plural of folder/directory. 2 folders">folders</item>
+        <item quantity="few" context="few">folders</item>
+        <item quantity="many" context="many">folders</item>
+        <item quantity="other" context="Plural of folder/directory.">folders</item>
     </plurals>
     
    <plurals name="general_num_shared_folders">
         <item quantity="one" context="Title of the incoming shared folders of a user in singular">shared folder</item>
+        <item quantity="few" context="few">shared folders</item>
+        <item quantity="many" context="many">shared folders</item>
         <item quantity="other" context="Title of the incoming shared folders of a user in plural.">shared folders</item>
     </plurals>
     
     <plurals name="general_num_downloads" context="in the notification. When downloading the notification is like 3 downloads.">
         <item quantity="one" context="Item menu option upon clicking on one or multiple files. Singular">download</item>
-        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">[$2222]</item>
+        <item quantity="few" context="few">downloads</item>
+        <item quantity="many" context="many">downloads</item>
+        <item quantity="other" context="Item menu option upon clicking on one or multiple files. Plural">downloads</item>
     </plurals>
     
     <plurals name="general_num_uploads">
         <item quantity="one" context="Transfer type description in the active file transfer panel, can either be upload or download. Singular">upload</item>
+        <item quantity="few" context="few">uploads</item>
+        <item quantity="many" context="many">uploads</item>
         <item quantity="other" context="Transfer type description in the active file transfer panel, can either be upload or download. Plural">uploads</item>
     </plurals>
     
      <plurals name="general_num_users" context="used for example when a folder is shared with 1 user or 2 users">
         <item quantity="one" context="used for example when a folder is shared with 1 user">user</item>
+        <item quantity="few" context="few">users</item>
+        <item quantity="many" context="many">users</item>
         <item quantity="other" context="used for example when a folder is shared with 2 or more users">users</item>
     </plurals>
     
@@ -108,7 +122,7 @@
     <string name="error_enter_email" context="when the user tries to log in MEGA without typing the email">Будь ласка, введіть адресу вашої електронної пошти</string>
     <string name="error_invalid_email" context="error when logging in to MEGA with an invalid email">Невірна адреса електронної пошти</string>
     <string name="error_enter_password" context="when the user tries to log in MEGA without typing the password">Please enter your password</string>
-    <string name="error_server_connection_problem" context="when the user tries to log in to MEGA without a network connection">Проблема з\\'єднання мережі, повторіть спробу пізніше</string>
+    <string name="error_server_connection_problem" context="when the user tries to log in to MEGA without a network connection">Проблема з\'єднання мережі, повторіть спробу пізніше</string>
     <string name="login_generating_key" context="the first step when logging in is calculate the private and public encryption keys">Обчислення ключів шифрування</string>
     <string name="login_connecting_to_server" context="Message displayed while the app is connecting to a MEGA server">Підключення до серверу</string>
     <string name="error_incorrect_email_or_password" context="Error message when a login attempt fails.">Невірна електронна пошта або пароль. Ви вже підтвердили обліковий запис?</string>    
@@ -121,11 +135,11 @@
     
     <string name="create_account_text" context="button that allows the user to create an account">Create account</string>
     <string name="name_text" context="Name of the user">name</string>
-    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I agree with MEGA\\'s <a href=&quot;https://mega.co.nz/mobile_privacy.html&quot;>Terms of Service</a></string>
+    <string name="tos" context="text placed on the checkbox of acceptation of the Terms of Service">I agree with MEGA\'s &lt;a href=&amp;quot;https://mega.co.nz/mobile_privacy.html&amp;quot;&gt;Terms of Service&lt;/a&gt;</string>
     <string name="already_account" context="Does the user already have a MEGA account">Вже маєте обліковий запис?</string>
     
     <string name="create_account_no_terms" context="warning dialog">You have to accept our Terms of Service.</string>
-	<string name="error_enter_username" context="Warning dialog">Будь ласка, введіть ваше ім\\'я.</string>
+	<string name="error_enter_username" context="Warning dialog">Будь ласка, введіть ваше ім\'я.</string>
     <string name="error_short_password" context="when creating the account">Пароль надто короткий</string>
     <string name="error_passwords_dont_match" context="when creating the account">Passwords do not match</string>
     <string name="error_email_registered" contect="when creating the account">Ця адреса електронної пошти вже зареєстрована в MEGA.</string>
@@ -169,7 +183,7 @@
 	<string name="file_properties_shared_folder_private_folder" context="the folder is private. A public user can\'t access the folder">No public link</string>
 	<string name="file_properties_shared_folder_public_link" context="the label when a folder can be accesed by public users">Публічне посилання</string>
 	<string name="file_properties_shared_folder_full_access" context="Refers to access rights for a file folder.">Повний доступ</string>
-	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Read & write</string>
+	<string name="file_properties_shared_folder_read_write" context="Refers to access rights for a file folder. (with the &amp; needed. Don\'t use the symbol itself. Use &amp;)">Read &amp; write</string>
 	<string name="file_properties_shared_folder_read_only" context="Refers to access rights for a file folder.">Тільки для читання</string>
 	<string name="file_properties_shared_folder_shared_with" context="title of the screen that shows the users with whom the user has shared a folder">Shared with: </string>
 	<string name="file_properties_shared_folder_permissions" context="Item menu option upon clicking on a file folder. Refers to the permissions of a file folder in the file manager.">Permissions:</string>
@@ -196,7 +210,7 @@
     <string name="download_cancel_downloading" context="Confirmation text when attempting to cancel the download">Ви хочете скасувати завантаження?</string>
     <string name="download_touch_to_cancel" context="Hint how to cancel the download">Натисніть щоб скасувати завантаження</string>
     <string name="error_file_size_greater_than_4gb" context="Warning message">Більшість пристроїв не можу завантажити файли розміром більше 4 ГБ. Ймовірно ваше завантаження буде невдалими.</string>
-    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">There isn\\'t any available app to execute this file on your device</string>
+    <string name="intent_not_available" context="message when trying to open a downloaded file but there isn\'t any app that open that file. Example: a user downloads a pdf but doesn\'t have any app to read a pdf">There isn\'t any available app to execute this file on your device</string>
 	
     <string name="context_share_image" context="to share an image using Facebook, Whatsapp, etc">Share image using</string>
     <string name="context_get_link" context="create a link of a file and send it using an app from the device">Share link</string>
@@ -288,7 +302,7 @@
     <string name="my_account_change_password" context="menu item">Змінити пароль</string>
     
     <string name="my_account_last_session" context="when did the last session happen">Last session:</string>
-    <string name="my_account_connections" context="header for the social connections, showing the number of contacts the user has">Зв\\'язок:</string>
+    <string name="my_account_connections" context="header for the social connections, showing the number of contacts the user has">Зв\'язок:</string>
     
     <string name="my_account_changing_password" context="message displayed while the app is changing the password">Зміна паролю</string>
     <string name="my_account_change_password_oldPassword" context="when changing the password, the first edittext is to enter the current password">Поточний пароль</string>
